# congressional-app-challenge-2023

./: .gitignore  app_data.db
.github/workflows/: code.yml
backend/: README.md  app_data.db  pyproject.toml
backend/classsync/: db.py  main.py  models.py  plagiarism_detector.py  random_roster.py
backend/classsync/ml/: image_utils.py
backend/classsync/ml/models/: partial_fc.py  scrfd.py  sliced_scrfd.py
frontend/: App.tsx  app.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/components/: Sidebar.tsx
frontend/pages/: Home.tsx
frontend/src/: App.tsx
frontend/src/components/: Team.tsx
frontend/src/routes/: Home.tsx  Plagiarism.tsx
frontend/src/routes/Dashboard/: Attendance.tsx  Camera.tsx  Dashboard.tsx  Teams.tsx
