[tool.poetry]
name = "classsync"
version = "0.1.0"
description = ""
authors = ["Calvin Laurenson <89622328+calvin-laurenson@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.21"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
onnxruntime = "^1.16.0"
numpy = "^1.26.0"
pillow = "^10.0.1"
requests = "^2.31.0"
pgvector = "^0.2.3"
sentence-transformers = "^2.2.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"

[tool.poetry.group.types.dependencies]
types-Pillow = "10.0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
mypy_path = "classync"

[[tool.mypy.overrides]]
module = "onnxruntime.*,sentence_transformers.*,pgvector.*"
ignore_missing_imports = true